chore: excercise 4 finishes but no correct bad alignment of search box off margins on right-links

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -34,7 +34,8 @@ img {
   background: #eee;
 }
 
-.container,.title {
+.container,
+.title {
   display: flex;
   justify-content: center;
   margin: 20px;
@@ -43,8 +44,8 @@ img {
 .card {
   display: flex;
   flex-direction: column;
-text-align: center;
-justify-content: center;
-align-items: center;
-gap:10px
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: 10px
 }
