--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -14,6 +14,7 @@ body {
   overflow: hidden;
   font-family: Roboto, sans-serif;
   display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -38,31 +39,52 @@ li {
   list-style: none;
 }
 
-.header .footer {
-  display: flex;
-
-}
-
 .header {
-  justify-content: flex-start;
-}
-
-.footer {
-  background-color: gray;
   display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-
+  width: 100%;
 }
 
-/* .left-side {
+.left-links {
   display: flex;
   align-items: flex-start;
   gap: 8px
 }
 
-.right-side {
+
+.right-links {
+  display: flex;
+  /* align-items: flex-end; */
+  margin-left: auto;
+  gap: 8px
+}
+
+.footer {
+  margin-top: auto;
+  background-color: #eeeeee;
   display: flex;
   align-items: flex-end;
-  gap: 8px
-} */
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a:link {
+  text-decoration: none;
+  color: darkgrey;
+} 
+
+input[type=text] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+}
